# rest_rpc

./: .gitignore  .gitmodules  An easy to use RPC framework implemented by c++11 and c++14.pptx  CMakeLists.txt  README.md
darwin/rest_rpc/: rest_rpc.cpp  rest_rpc.hpp
darwin/rest_rpc.xcodeproj/: project.pbxproj
example/async_client_example/: CMakeLists.txt  async_client_example.cpp
example/bench_client/: CMakeLists.txt  bench_client.cpp
example/bench_server/: CMakeLists.txt  bench_server.cpp
example/codec_policy/: codec_policy.cpp
example/key_value_client/: key_value_client.cpp
example/key_value_server/: key_value_server.cpp
example/pub_sub_example/: CMakeLists.txt  pub_client_example.cpp  sub_client_example.cpp
example/server_example/: CMakeLists.txt  server_example.cpp
example/sync_client_example/: CMakeLists.txt  sync_client_example.cpp
example/test_timeout_and_switch_endoint/: test_timeout_and_switch_endpoint.cpp
example/timax_bind/: CMakeLists.txt  timax_bind.cpp
msvc/: rest_examples.props  rest_rpc.sln
msvc/codec_policy/: codec_policy.vcxproj  codec_policy.vcxproj.filters
msvc/key_value_server/: key_value_server.vcxproj  key_value_server.vcxproj.filters
msvc/kv_store_client/: kv_store_client.vcxproj  kv_store_client.vcxproj.filters
msvc/rest_rpc/: rest_rpc.vcxproj  rest_rpc.vcxproj.filters
msvc/test_timeout_and_switch_endpoint/: test_timeout_and_switch_endpoint.vcxproj  test_timeout_and_switch_endpoint.vcxproj.filters
rest_rpc/: forward.hpp  server.hpp
rest_rpc/base/: codec.hpp  common.h  consts.h  excetion.hpp  function_traits.hpp  hash.hpp  io_service_pool.hpp  log.hpp  reflection.hpp  utils.hpp
rest_rpc/client/: async_client.hpp  client_base.hpp  protocol.hpp  sync_client.hpp
rest_rpc/client/detail/: async_client_private.hpp  async_connection.hpp  async_rpc_channel.hpp  async_rpc_channel_impl.hpp  async_rpc_context.hpp  async_rpc_session.hpp  async_rpc_session_impl.hpp  async_sub_channel.hpp  async_sub_session.hpp
rest_rpc/codec/: codec.hpp  codec_boost.hpp  codec_json.hpp  codec_kapok.hpp  codec_msgpack.hpp
rest_rpc/server/: connection.hpp  connection_impl.hpp  context.hpp  invoker_traits.hpp  ios_wrapper.hpp  router.hpp  server.hpp
